# midstream

./: .env  Cargo.toml  README.md
examples/: openrouter.rs
hyprstream-main/src/: config.rs  service.rs
hyprstream-main/src/metrics/: aggregation.rs
hyprstream-main/src/storage/: adbc.rs  duckdb.rs  mod.rs
src/: lib.rs
