[package]
name = "midstream"
version = "0.1.0"
edition = "2021"
description = "Real-time LLM streaming with inflight analysis"

[dependencies]
hyprstream = { path = "hyprstream-main" }
tokio = { version = "1.42.0", features = ["full"] }
arrow = "54.0.0"
arrow-flight = { version = "54.0.0", features = ["flight-sql-experimental"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3.31"
tracing = "0.1"
config = { version = "0.13", features = ["toml"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
eventsource-stream = "0.2"
tokio-stream = "0.1"
dotenv = "0.15"

[dev-dependencies]
mockall = "0.11"
tokio = "1.42.0"
tokio-test = "0.4"

[[example]]
name = "openrouter"
path = "examples/openrouter.rs"
